--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -6,6 +6,8 @@ on:
   push:
     tags:
       - 'v*'
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       tag:
@@ -38,6 +40,7 @@ jobs:
           echo "Ref: ${{ github.ref }}"
           echo "Tag Input: ${{ inputs.tag }}"
           git tag --list --sort=-creatordate | head -n 15
+          echo "Commit message:" && git log -1 --pretty=%B
 
       - name: Resolve effective tag & previous tag
         id: tags
@@ -109,6 +112,52 @@ jobs:
             release/ReleaseNotes-Linux.md
             release/SHA256SUMS.txt
             release/manifest.json
+
+      - name: Determine next version (auto release on push)
+        id: version
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/') && github.ref == 'refs/heads/main'
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if echo "$COMMIT_MSG" | grep -qi '\[skip release\]'; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "Release skipped by commit message directive.";
+            exit 0
+          fi
+          TAGS=$(git tag -l 'v[0-9]*.[0-9]*.[0-9]*')
+          if [ -z "$TAGS" ]; then
+            NEW_TAG="v0.1.0"
+          else
+            LATEST=$(echo "$TAGS" | sort -V | tail -n1)
+            MAJOR=$(echo $LATEST | sed -E 's/v([0-9]+)\.[0-9]+\.[0-9]+/\1/')
+            MINOR=$(echo $LATEST | sed -E 's/v[0-9]+\.([0-9]+)\.[0-9]+/\1/')
+            PATCH=$(echo $LATEST | sed -E 's/v[0-9]+\.[0-9]+\.([0-9]+)/\1/')
+            PATCH=$((PATCH+1))
+            NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+          fi
+          echo "Computed next tag: $NEW_TAG"
+          echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
+          git tag "$NEW_TAG"
+          git push origin "$NEW_TAG"
+
+      - name: Auto create release from push
+        if: steps.version.outputs.skip != 'true' && steps.version.outputs.new_tag && github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.version.outputs.new_tag }}
+          name: ${{ steps.version.outputs.new_tag }}
+          body: |
+            Automated release generated from push to main.
+            Previous tag: ${{ steps.tags.outputs.previous_tag }}
+            Generated archives and notes included.
+          files: |
+            release/${{ env.WINDOWS_ARCHIVE }}
+            release/ReleaseNotes-Windows.md
+            release/${{ env.LINUX_ARCHIVE }}
+            release/ReleaseNotes-Linux.md
+            release/SHA256SUMS.txt
+            release/manifest.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Attach assets to release
         if: github.event_name == 'release' && github.event.inputs.dryRun != 'true'
