--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,26 +1,33 @@
 site_name: "TRMM Scripts Documentation"
 site_description: "Windows & Linux scripting for Tactical RMM"
 repo_url: https://github.com/Brandon-Roff/TRMM-Scripts
+edit_uri: blob/main/docs/
 theme:
   name: material
   palette:
     - scheme: default
       primary: red
       accent: red
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
     - scheme: slate
       primary: red
       accent: red
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
   font:
     text: Roboto
     code: Roboto Mono
   logo: assets/logo.svg
   favicon: assets/favicon.svg
-  custom_dir: overrides
   features:
     - navigation.tabs
     - navigation.sections
     - navigation.expand
     - content.code.copy
+    - content.action.edit
 nav:
   - Home: index.md
   - Windows Scripts:
@@ -45,3 +52,15 @@ extra_css:
   - css/redblack.css
 plugins:
   - search
+  - git-revision-date-localized:
+      fallback_to_build_date: true
+      type: datetime
+      timezone: UTC
+      locale: en
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/Brandon-Roff/TRMM-Scripts
+      name: GitHub Repository
+  copyright: "© 2025 TRMM Scripts"
